--- a/dependabot.yml
+++ b/dependabot.yml
@@ -4,4 +4,12 @@ updates:
   directory: "/"
   schedule:
     interval: weekly
-  open-pull-requests-limit: 10
+  open-pull-requests-limit: 1
+- package-ecosystem: cargo
+  directory: "/"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 1
+  allow:
+  - dependency-type: direct
+  - dependency-type: indirect
